--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,25 +1,12 @@
 %nav.navbar.footer
+
   .row
-    .four.columns
-      %p.copyright
-        Copyright &copy; 2013, KwikNews
-    .eight.columns
+    .push_four.four.columns.center
       %ul
         %li
           = link_to 'About Us', '#'
         %li
           = link_to 'Contact Us', '#'
-        %li
-          = link_to 'Videos', '#'
-        %li
-          = link_to 'News', '#'
-        %li
-          = link_to 'Nation', '#'
-        %li
-          = link_to 'Lifestyle', '#'
-        %li
-          = link_to 'Sport', '#'
-        %li
-          = link_to 'World', '#'
-        %li
-          = link_to 'Archive', '#'
+    .push_four.four.columns.center
+      %p.copyright
+        Copyright &copy; 2013, MPS
