--- a/app/views/media_profiles/edit.html.haml
+++ b/app/views/media_profiles/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing media_profile
+%h2= t('.title')
 
 = render 'form'
 
-= link_to 'Show', @media_profile
+= #link_to 'Show', @media_profile
 \|
-= link_to 'Back', media_profiles_path
+=# link_to 'Back', media_profiles_path
