--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -1,33 +1,38 @@
-%h1 Listing media_profiles
+.row
+  %h2.four.columns= t('.title')
+  .btn.primary.medium.push_five.three.columns
+    = link_to t('new_media_profile'), new_media_profile_path
 
-%table
-  %tr
-    %th Media type
-    %th Title
-    %th Name
-    %th Designation
-    %th Company name
-    %th Office phone
-    %th Phone
-    %th Email
-    %th
-    %th
-    %th
 
-  - @media_profiles.each do |media_profile|
+
+%table.rounded
+  %thead
     %tr
-      %td= media_profile.media_type
-      %td= media_profile.title
-      %td= media_profile.name
-      %td= media_profile.designation
-      %td= media_profile.company_name
-      %td= media_profile.office_phone
-      %td= media_profile.phone
-      %td= media_profile.email
-      %td= link_to 'Show', media_profile
-      %td= link_to 'Edit', edit_media_profile_path(media_profile)
-      %td= link_to 'Destroy', media_profile, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %th Media type
+      %th Title
+      %th Name
+      %th Designation
+      %th Company name
+      %th Office phone
+      %th Email
+      %th
+      %th
+      %th
+  %tbody
+    - @media_profiles.each do |media_profile|
+      %tr
+        %td= media_profile.media_type
+        %td= media_profile.title
+        %td= media_profile.name
+        %td= media_profile.designation
+        %td= media_profile.company_name
+        %td= media_profile.office_phone
+        %td= media_profile.email
+        %td= link_to t('show'), media_profile
+        %td= link_to t('edit'), edit_media_profile_path(media_profile)
+        %td= link_to t('destroy'), media_profile, :method => :delete, :data => { :confirm => t('are_you_sure') }
 
 %br
 
-= link_to 'New Media profile', new_media_profile_path
+
+
