--- a/app/views/media_profiles/new.html.haml
+++ b/app/views/media_profiles/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New media_profile
+%h2= t('.title')
 
 = render 'form'
 
-= link_to 'Back', media_profiles_path
+=# link_to 'Back', media_profiles_path
