--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -17,20 +17,20 @@
       %th Email
       %th
       %th
-      %th
   %tbody
     - @media_profiles.each do |media_profile|
       %tr
         %td= media_profile.media_type
         %td= media_profile.title
-        %td= media_profile.name
+        %td= link_to media_profile.name, media_profile, class: 'show-link'
         %td= media_profile.designation
         %td= media_profile.company_name
         %td= media_profile.office_phone
-        %td= media_profile.email
-        %td= link_to t('show'), media_profile
-        %td= link_to t('edit'), edit_media_profile_path(media_profile)
-        %td= link_to t('destroy'), media_profile, :method => :delete, :data => { :confirm => t('are_you_sure') }
+        %td= link_to media_profile.email, media_profile, class: 'show-link'
+        %td
+          %span.btn.medium.warning= link_to t('edit'), edit_media_profile_path(media_profile), class: 'wider-btn'
+        %td
+          %span.btn.medium.danger= link_to t('destroy'), media_profile, :method => :delete, :data => { :confirm => t('are_you_sure') }
 
 %br
 
