--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,8 +15,8 @@
             =link_to media_profiles_path do
               = t('.list_all_media_profiles')
           %li
-            =link_to '#' do
-              %i.icon-twitter
+            =link_to events_path do
+              = t('.list_all_events')
           %li
             =link_to '#' do
               %i.icon-gplus
