--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -8,13 +8,13 @@
 %table.rounded
   %thead
     %tr
-      %th Media type
-      %th Title
-      %th Name
-      %th Designation
-      %th Company name
-      %th Office phone
-      %th Email
+      %th= t('media_type')
+      %th= t('name_title')
+      %th= t('name')
+      %th= t('designation')
+      %th= t('company_name')
+      %th= t('office_phone')
+      %th= t('email')
       %th
       %th
   %tbody
