--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,25 +1,24 @@
 = form_for @event do |f|
-  - if @event.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
-      %ul
-        - @event.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :date
-    = f.date_select :date
-  .field
-    = f.label :time
-    = f.time_select :time
-  .field
-    = f.label :venue
-    = f.text_field :venue
-  .field
-    = f.label :official
-    = f.text_field :official
-  .field
-    = f.label :organizer
-    = f.text_field :organizer
-  .actions
-    = f.submit 'Save'
+  .container
+    .row
+      .field
+        %table.table.strip.show-table
+          %tbody
+            %tr
+              %th= f.label t('date')
+              %td= f.text_field :date, class: 'datepicker', value: ( @event.date.strftime('%d-%m-%Y') unless @event.new_record? )
+            %tr
+              %th= f.label t('time')
+              %td= f.time_select :time
+            %tr
+              %th= f.label t('venue')
+              %td= f.text_field :venue
+            %tr
+              %th= f.label t('official')
+              %td= f.text_field :official
+            %tr
+              %th= f.label t('organizer')
+              %td= f.text_field :organizer
+    .row
+      %span.btn.primary.medium
+        = f.submit t('save')
