--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,9 @@
     %title MPS - Media Invite Manager
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
+    = stylesheet_link_tag "//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"
+    = javascript_include_tag "//code.jquery.com/ui/1.10.3/jquery-ui.js"
+
     = javascript_include_tag :modernizr
     = csrf_meta_tags
   %body
