some layout change

--- a/app/views/media_profiles/show.html.haml
+++ b/app/views/media_profiles/show.html.haml
@@ -1,6 +1,6 @@
 .row
-  %h2.four.columns= t('.title')
-  .btn.secondary.medium.push_five.three.columns
+  %h2.six.columns= t('.title')
+  .btn.secondary.medium.push_three.three.columns
     = link_to t('edit_media_profile'), edit_media_profile_path(@media_profile)
 
 
