--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,6 +1,6 @@
 .row
-  %h2.four.columns= t('.title')
-  .btn.secondary.medium.push_five.three.columns
+  %h2.six.columns= t('.title')
+  .btn.secondary.medium.push_three.three.columns
     = link_to t('edit_event'), edit_event_path(@event)
 
 %table.rounded
