--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -9,7 +9,7 @@
   %thead
     %tr
       %th= t('media_type')
-      %th= t('name_title')
+      /%th= t('name_title')
       %th= t('name')
       %th= t('designation')
       %th= t('company_name')
@@ -21,7 +21,7 @@
     - @media_profiles.each do |media_profile|
       %tr
         %td= media_profile.media_type
-        %td= media_profile.title
+        /%td= media_profile.title
         %td= link_to media_profile.name, media_profile, class: 'show-link'
         %td= media_profile.designation
         %td= media_profile.company_name
