--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -13,6 +13,12 @@
       %td=t('time')
       %td= @event.time.to_s(:time)
     %tr
+      %td=t('agenda_details')
+      %td= @event.agenda_details.blank? ? '' : content_tag(:a, href: @event.agenda_details, class: 'image-link') do image_tag(@event.agenda_details.thumb) end
+    %tr
+      %td=t('letter')
+      %td= @event.letter.blank? ? '' : content_tag(:a, href: @event.letter, class: 'image-link') do image_tag(@event.letter.thumb) end
+    %tr
       %td=t('venue')
       %td= @event.venue
     %tr
