Show event name in event show.

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -7,6 +7,9 @@
 
   %tbody
     %tr
+      %td=t('name')
+      %td= @event.name
+    %tr
       %td=t('date')
       %td= @event.date.strftime('%d-%m-%Y')
     %tr
