--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -41,7 +41,7 @@
         %li.field
           .picker
             - select_options = [[t('all_media'),'all_media']] + MediaProfile.media_types.map{ |a| [a,a]}
-            = select_tag 'member_profile_select', options_for_select(select_options)
+            = select_tag 'media_profile_select', options_for_select(select_options)
         %li
           %span.btn.medium.primary
             = f.button t('send')
