add walkins first pass. don't use delay job for now

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -110,5 +110,23 @@
                       %small
                         = link_to t('cannot_attend'), update_attendance_event_path(media_profile_id: attendee.media_profile_id, attendee_id: attendee.id, event_id: @event.id, attended: false, attendance_status: 'cannot_attend'), method: :post
 
+  .row
+    = nested_form_for @event.attendance_list, url: add_walkins_event_path(@event), method: :post do |f|
+      = f.fields_for :attendees do |a|
+        = a.text_field :name, value: t('name'), :class => 'text input', :placeholder => t('name') if a.object.new_record?
+        = a.text_field :email, value: t('email'), :class => 'text input' if a.object.new_record?
+        = a.text_field :company_name, value: t('company_name'), :class => 'text input'if a.object.new_record?
+        = a.text_field :phone, value: t('phone') , :class => 'text input'if a.object.new_record?
+        = a.link_to_remove t('remove') if a.object.new_record?
+        = a.hidden_field :attended, value: 1
+      = f.link_to_add :attendees do
+        %i.icon-user-add
+        =t('add_attendee')
+      %span
+        |
+      = link_to 'javascript:', :onClick => 'submit();' do
+        %i.icon-pencil
+        =t('update')
+
 
 
