Select media type for filtering on index.

--- a/app/views/media_profiles/index.html.haml
+++ b/app/views/media_profiles/index.html.haml
@@ -3,8 +3,7 @@
   .btn.primary.medium.push_five.three.columns
     = link_to t('new_media_profile'), new_media_profile_path
 
-
-
+= render 'choose_media_type_select'
 %table.rounded
   %thead
     %tr
