Profile media index table styling.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,29 @@
   }
 }
 
+table {
+  .buttons {
+    a {
+      width: 150px;
+    }
+  }
+  .profile-details {
+    ul {
+      li {
+        float: left;
+        padding: 0 5px 0 5px;
+
+        border-right: 1px solid lightgray;
+
+        &:last-child {
+          border-right: none;
+        }
+      }
+    }
+    
+  }
+}
+
 .show-link {
   color: darkred !important;
 }
