link to event in email

--- a/app/views/invitation_mailer/send_invites.html.haml
+++ b/app/views/invitation_mailer/send_invites.html.haml
@@ -55,6 +55,9 @@
     %br
 
     %p
+      = "Maklumat lanjut boleh didapati di #{link_to 'sini', event_path(@event)}"
+
+    %p
       Kehadiran anda amat dialu-alukan.
 
 
