--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -95,7 +95,7 @@
                 NIL
               %td
                 NIL
-              %td
+              %td{style: 'width: 80px;'}
                 - if !attendee.attended.nil? && !attendee.attendance_status.nil?
                   = t(attendee.attendance_status)
                 - else
@@ -106,9 +106,10 @@
                     %li
                       %small
                         = link_to t('not_present'), update_attendance_event_path(media_profile_id: attendee.media_profile_id, attendee_id: attendee.id, event_id: @event.id, attended: false, attendance_status: 'not_present'), method: :post
-                    %li
-                      %small
-                        = link_to t('cannot_attend'), update_attendance_event_path(media_profile_id: attendee.media_profile_id, attendee_id: attendee.id, event_id: @event.id, attended: false, attendance_status: 'cannot_attend'), method: :post
+                    /
+                      %li
+                        %small
+                          = link_to t('cannot_attend'), update_attendance_event_path(media_profile_id: attendee.media_profile_id, attendee_id: attendee.id, event_id: @event.id, attended: false, attendance_status: 'cannot_attend'), method: :post
 
   .row
     = nested_form_for @event.attendance_list, url: add_walkins_event_path(@event), method: :post do |f|
