use walkins ( < attendees) instead of attendees for walkins

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -86,11 +86,11 @@
               %td
                 = index + 1
               %td
-                = attendee.media_profile.name
+                = attendee.media_profile.try(:name) || attendee.name
               %td
-                = attendee.media_profile.email
+                = attendee.media_profile.try(:email) || attendee.email
               %td
-                = attendee.media_profile.company_name
+                = attendee.media_profile.try(:company_name) || attendee.company_name
               %td
                 NIL
               %td
@@ -113,14 +113,14 @@
 
   .row
     = nested_form_for @event.attendance_list, url: add_walkins_event_path(@event), method: :post do |f|
-      = f.fields_for :attendees do |a|
+      = f.fields_for :walkins do |a|
         = a.text_field :name, value: t('name'), :class => 'text input', :placeholder => t('name') if a.object.new_record?
         = a.text_field :email, value: t('email'), :class => 'text input' if a.object.new_record?
         = a.text_field :company_name, value: t('company_name'), :class => 'text input'if a.object.new_record?
         = a.text_field :phone, value: t('phone') , :class => 'text input'if a.object.new_record?
         = a.link_to_remove t('remove') if a.object.new_record?
         = a.hidden_field :attended, value: 1
-      = f.link_to_add :attendees do
+      = f.link_to_add :walkins do
         %i.icon-user-add
         =t('add_attendee')
       %span
