--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -85,11 +85,19 @@
     </table>
     <br/>
     <br/>
-    <table cellspacing="0" cellpadding="0"> <tr> 
-<td align="center" width="300" height="40" bgcolor="#000091" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
-<a href=<%= update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: true )%> style="color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block">Saya akan hadir</a>
-</td> 
-</tr> </table> 
+    <table cellspacing="10px" cellpadding="10px"> 
+      <tr> 
+        <td align="center" width="300" height="40" bgcolor="#000091" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
+          <a href=<%= update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 1 )%> style="color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block">Saya akan hadir</a>
+        </td> 
+      </tr> 
+
+      <tr> 
+        <td align="center" width="300" height="40" bgcolor="#000091" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
+          <a href=<%= update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: 0 )%> style="color: #ffffff; font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block">Saya tidak akan hadir</a>
+        </td> 
+      </tr> 
+    </table> 
     <br/>
     <p>
       Atau klik di <a href=<%= update_rsvp_event_url(id: @event.id, attendee_id: @attendee.id, rsvp_response: true )%>>sini</a>
