--- a/app/views/invitation_mailer/send_invites.html.erb
+++ b/app/views/invitation_mailer/send_invites.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>
-      <%= "Tahniah, #{@media_profile.name}," %>
+      <%= "#{@media_profile.name}," %>
     </h1>
     <p>
       <%= "Anda dijemput untuk menghadiri acara, #{@event.name}" %>
