no need to 'attended' upon create walkin.

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -119,7 +119,7 @@
         = a.text_field :company_name, value: t('company_name'), :class => 'text input'if a.object.new_record?
         = a.text_field :phone, value: t('phone') , :class => 'text input'if a.object.new_record?
         = a.link_to_remove t('remove') if a.object.new_record?
-        = a.hidden_field :attended, value: 1
+        =# a.hidden_field :attended, value: 1
       = f.link_to_add :walkins do
         %i.icon-user-add
         =t('add_attendee')
