--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -10,7 +10,7 @@
             %tr
 
               %th= f.label t('date')
-              %td= f.text_field :date, class: 'text input datepicker', value: ( @event.date.strftime('%d-%m-%Y') unless @event.new_record? )
+              %td= f.text_field :date, class: 'text input datepicker', value: ( @event.date.try(:strftime,'%d-%m-%Y') )#unless @event.new_record? )
             %tr
               %th= f.label t('time')
               %td= f.time_select :time
