logo for header.

--- a/app/views/layouts/_empty_header.html.haml
+++ b/app/views/layouts/_empty_header.html.haml
@@ -6,7 +6,7 @@
     .six.columns
       %h3.six.columns.logo
 
-        MPS 
+        = image_tag 'logo.png'
     
       /- Search
       / %ul.six.columns
