--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,8 +5,7 @@
   .row.bottom
     .six.columns
       %h3.six.columns.logo
-
-        MPS 
+        = image_tag 'logo.png'
     .six.columns
       /- Social Networking Buttons
       .five.push_one.columns
